--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,56 @@
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 body, html {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  font-family: 'VITRO';
+  font-size: 16px;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  font-family: 'VITRO';}
+  min-width: 1200px;
+  min-height: 600px;
+}
 
+@media (max-width: 1400px) {
+  html {
+    font-size: 23px;
+  }
+}
+@media (min-width: 1401px) and (max-width: 1600px) {
+  html {
+    font-size: 26px;
+  }
+}
+@media (min-width: 1601px) and (max-width: 1800px) {
+  html {
+    font-size: 29px;
+  }
+}
+@media (min-width: 1801px) {
+  html {
+    font-size: 32px;
+  }
+}
+
+@media (max-height: 700px) {
+  html {
+    font-size: 23px;
+  }
+}
+@media (min-height: 701px) and (max-height: 800px) {
+  html {
+    font-size: 26px;
+  }
+}
+@media (min-height: 801px) and (max-height: 900px) {
+  html {
+    font-size: 29px;
+  }
+}
 
 div,
 nav,
