--- a/src/style/end.css
+++ b/src/style/end.css
@@ -1,169 +1,142 @@
 .game-result-screen {
   height: 100vh;
-
-  background: linear-gradient(to bottom, #69779B,  #8090a4 );
-  color: #fff; /* White text color */
+  background: linear-gradient(to bottom, #69779B,  #8090a4);
+  color: #fff;
   font-family: Arial, sans-serif;
   padding: 20px;  
 }
-  .rocketimage1{
-    position: absolute;
-    right: 0; /* 오른쪽에 붙게 설정 */
-    top: 30%;
-    margin-right: 50px; /* 필요한 경우 오른쪽 여백 설정 */
-    height: 400px;
-    width: 300px;
-  }
-.rocketimage{ 
+
+.trophyimage1 {
   position: absolute;
-  top: 30%;
-  margin-left: 10px;
-  height: 400px;
-  width: 300px;
+  right: 0;
+  top: 35%;
+  margin-right: 8%;
+  height: 30vh;
+  width: 30vh;
 }
+
+.trophyimage {
+  position: absolute;
+  top: 35%;
+  margin-left: 6% ;
+  height: 30vh;
+  width: 30vh;
+}
+
 .header {
   text-align: center;
   margin-bottom: 20px;
 }
+
 .logo {
-  border: 10px solid #7EA08D;
-  position: absolute;
-  height: 100px;
-  width: 120px;
+  border: 1vh solid#11324C;
+  position: absolute; 
+  height: 11vh;
+  width: 12vh;
   top: 0;
-  margin-top: 50px;
+  margin-top: 5vh;
   background-color: white;
   border-radius: 10px;
-  display: flex; /* Flexbox 적용 */
-  flex-direction: column; /* 세로 정렬 */
-  align-items: center; /* 가로 중앙 정렬 */
-  justify-content: center; /* 세로 중앙 정렬 */
-}
-
-.logo h2 {
-  color: #7EA08D;
-  margin: 0;
-}
-
-.header h1 {
-  font-size: 32px;
-  font-weight: bold;
-  margin-bottom: 10px;
-}
-
-.stars {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
 }
 
-.star {
-  width: 20px;
-  height: 20px;
- /* Replace with your star icon */
-  margin: 0 5px;
+.logo h2 {
+  font-size: 0.6rem;
+  color: #11324C;
+  margin: 0;
 }
+
+
 
 .content {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 30px;
-  margin-bottom: 20px;
-}
-.wrap {
-  position: relative;
-  background-color: white;
-  border: 10px solid #7EA08D;
-  border-radius: 10px;
-  padding: 30px;
-  display: flex;
-  gap: 50px;
-  justify-content: center; /* 수평으로 시작 부분에 정렬 */
-  align-items: center; /* 수직 중앙 정렬 */
-}
-
-.team-ranking
-{
-  display: flex;
-  flex-direction: column; /* 세로 정렬 */
-  align-items: center;    /* 가로 중앙 정렬 */
-  justify-content: center; /* 세로 중앙 정렬 */
-  height: 60vh;          /* 전체 화면 높이 */
-  text-align: center;     /* 텍스트 중앙 정렬 */
-  width: 150px;
-  background-color: #7E94BF; /* Lighter blue background */
-  padding: 10px;
-  border-radius: 10px;
-  
-}
-.overall-ranking
-{
-  display: flex;
-  width: 150px;
-  flex-direction: column; /* 세로 정렬 */
-  align-items: center;    /* 가로 중앙 정렬 */
-  justify-content: center; /* 세로 중앙 정렬 */
-  height: 60vh;          /* 전체 화면 높이 */
-  text-align: center;     /* 텍스트 중앙 정렬 */
-  
-  background-color: #5357A6; /* Lighter blue background */
-  padding: 10px;
-  border-radius: 10px;
-}
-.overall-top-10
-{
-  display: flex;
-  width: 150px;
-  flex-direction: column; /* 세로 정렬 */
-  align-items: center;    /* 가로 중앙 정렬 */
-  justify-content: center; /* 세로 중앙 정렬 */
-  height: 60vh;          /* 전체 화면 높이 */
-  text-align: center;     /* 텍스트 중앙 정렬 */
-  
-  background-color: #9AC1D9; /* Lighter blue background */
-  padding: 10px;
-  border-radius: 10px;
-}
-.ranking-item {
-  display: block;
-  align-items: center;
-  margin-top: 160px;
-  margin-bottom: 10px;
  
 }
 
-.ranking-number { 
-    border-radius: 5px;
-    color: white;
- background-color: #9692AF;
-  display:block;
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 30px;
-  border: 5px solid #9692AF;
+.wrap {
+  position: relative;
+  background-color: #ffffff;
+  border: 10px solid #11324C;
+  border-radius: 10px;
+  padding: 30px;
+  display: flex;
+  gap: 10vh;
+  justify-content: center;
+  align-items: center;
 }
 
-.ranking-icon img {
-  width: 30px;
-  height: 30px;
-}
-
-.footer {
+.team-ranking {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
   text-align: center;
+  width: 25vh;
+  background-color: #f0eee9;
+  padding: 10px;
+  border-radius: 10px;  
+}
+
+.overall-ranking {
+  display: flex;
+  width: 40vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 60vh;
+  text-align: center;
+  background-color: #f0eee9;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.ranking-item {
+  display: block;
+  align-items: center;
+  margin-top: 10vh;
+  margin-bottom: 10px;
+}
+
+.ranking-number { 
+  border-radius: 5px;
+  color: white;
+  background-color: #11324C;
+  display: block;
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  border: 5px solid #11324C;  
+}
+.ranking-item1{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(5, auto); 
+  row-gap: 0.1vh;  
+  column-gap: 2vh;
+  margin-top: 14vh; 
+  margin-bottom: 1vh;
+  grid-auto-flow: column;
+  
 }
 
 .home-button {
-  margin-top: 30px; 
+  margin-top: 30px;
   position: absolute;
   top: 90%;
   left: 50%;
   transform: translate(-50%, -50%);
   display: flex;
-  align-items: center;   
+  align-items: center;
   justify-content: center;
   width: 20vh;
-  background-color: #ACDBDF; 
-  color: #fff;
+  background-color: #11324C;
+  color: #fff;  
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
