--- a/src/style/game.css
+++ b/src/style/game.css
@@ -1,142 +1,199 @@
+@font-face {
+  font-family: 'Cafe24Ssurround';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/Cafe24Ssurround.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container {
   display: flex;
   height: 100vh;
-  background-color: #808FA4;
+  background: linear-gradient(#a4b2c8, #8292a5);
   flex-wrap: wrap;
-}
-
-.topcontainer {
-  display: flex;
-  position: relative;
-  width: 100%;
-  justify-content: space-around;
-  height: 15vh;
-}
-
-.game_logo {
-  margin-top: 4vh;
-  font-size: calc(2vh + 1.7vw);
-  height: 9vh;
-  width: 11vw;
-  line-height: 8.5vh;
-  text-align: center;
-  border-radius: 50px;
-  color: rgb(39, 30, 118);
-  border-radius: 50%;
-  box-shadow: 0.3vh 0.3vh rgb(104, 107, 109);
-  background-color: rgb(231, 244, 255);
-  font-style: italic;
-  font-weight: 900;
-  margin-right: 4.5vw;
-  margin-left: 1.5vw;
-}
-
-.title {
-  margin-top: 4vh;
-  font-size: calc(4vh + 2.5vw);
-  font-weight: bold;
-  color: white;
-  text-shadow: 4px 4px 0px #FF6F61;
-  height: auto;
-  font-weight: 900;
-}
-
-.timer {
-  margin-top: 7.5vh;
-  font-size: calc(1.8vh + 0.8vw);
-  width: 17vw;
-  height: 7vh;
-  background-color: white;
-  text-align: center;
-  border-radius: 7vh;
-  border-style: solid;
-  border-width: 0.5vh;
-  border-color: black gray black gray;
-  font-weight: 600;
-  line-height: 6.5vh;
-  font-weight: 900;
 }
 
 .leftcontainer {
   position: relative;
-  width: 10%;
+  width: 30%;
   flex-grow: 1;
   text-align: center;
   align-items: center;
-  margin-right: 5.5%;
-  margin-left: 4.5%;
+  margin-right: 6.5%;
+  margin-left: 3.5%;
   margin-top: 1vh;
 }
 
+.profile {
+  position: relative;
+  margin-left: 1.5vw;
+  background: linear-gradient(#bdcfe4, #d1e0f0);
+  margin-top: 1.9vh;
+  border-radius: 50%;
+  border: 3.2px solid rgb(131, 158, 192);
+  box-shadow: 0 0 0 3px #539cf0, 0 0 0 6px #6d7c8e;
+  overflow: hidden;
+  width: 10.5vw;
+  min-width: 130px;
+  min-height: 130px;
+  height: 18vh;
+  z-index: 3000;
+}
+
+.profile img {
+  width: 95%;
+  height: 95%;
+  margin-left: 2.5%;
+  margin-top: 7%;
+  z-index: 3000;
+}
+
+.profile_name {
+  letter-spacing: 0.7vw;
+  position: relative;
+  line-height: 5.5vh;
+  margin-top: -14.3vh;
+  font-size: calc(2.2vh + 1.2vw);
+  background: linear-gradient(#4088c0, #61a7dc);
+  width: 25vw;
+  min-width: 300px;
+  margin-left: 6.5vw;
+  height: 6vh;
+  padding-left: 3vw;
+  font-weight: 900;
+  color: rgb(236, 244, 252);
+  -webkit-text-stroke: 1.4px #11324D;
+  z-index: 2000;
+  border-radius: 40px 60px / 50px 30px;
+  border: 2px solid rgb(131, 158, 192);
+  box-shadow: 0 0 0 3px #bcbcbc, 0 0 0 5px #6d7c8e;
+}
+
+.profile_timer {
+  position: relative;
+  margin-top: -3vh;
+  margin-left: 8vw;
+  font-size: calc(1.6vh + 0.6vw);
+  width: 20vw;
+  min-width: 250px;
+  height: 8.5vh;
+  padding-right: 3vw;
+  background: linear-gradient(white, rgb(212, 212, 212));
+  text-align: right;
+  border-style: solid;
+  border: 2.5px solid #dbdbdb;
+  box-shadow: 0 0 0 2.5px #b8b8b8, 0 0 0 4.5px #686868;
+  color: rgb(58, 58, 58);
+  line-height: 11.5vh;
+  font-weight: 900;
+  z-index: 1000;
+  border-radius: 60px 25px / 35px 50px;
+
+  @media (max-width: 1300px) {
+    font-size: calc(1.6vh + 0.5vw);
+  }
+}
+
 .rankbox {
-  margin-top: 3.5vh;
-  padding-top: 3.7vh;
-  height: 60vh;
-  width: 120%;
-  border-radius: 1vh;
-  background-color: #95a8c1;
-  border: 0.5vh solid #11324C;
-  box-shadow: 3.5px 3.5px 1px #11324C;
+  margin-top: 10vh;
+  height: 62vh;
+  width: 75%;
+  margin-left: 19%;
+  border-radius: 0.5vh;
+  background: linear-gradient(#bbd0eb, #94b3dc);
+  border: 3.5px solid #11324C;
+  box-shadow: 1px 3px 1px #24455f;
+}
+
+.rankbox_title {
+  font-size: calc(1.6vh + 1.1vw);
+  width: 90%;
+  margin-left: 5%;
+  border-bottom: 0.4vh solid #11324C;
+  height: 9vh;
+  line-height: 9vh;
+  font-weight: 900;
+  color: #0d1922;
+}
+
+.rankbox_num {
+  letter-spacing: 0.2vw;
+  height: 8vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1.5px solid #11324D;
+  border-radius: 47%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-size: calc(1.4vh + 1.2vw);
+  background-color: rgb(250, 237, 214);
+}
+
+.rankbox div p {
+  letter-spacing: 0.35vw;
+  margin-top: 3%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1.5px solid #11324D;
+  border-radius: 3vh;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: rgb(237, 237, 237);
 }
 
 .rankbox_first {
-  background-color: #153c5a;
-  color: rgb(237, 237, 237);
+  justify-content: space-around;
+  display: flex;
   margin-left: 7%;
   margin-right: 7%;
   width: 86%;
-  height: 12vh;
-  line-height: 11vh;
+  height: 8vh;
+  line-height: 2vh;
   font-weight: bold;
-  border-radius: 0.5vh 1.5vh;
-  border: 0.5vh solid #b4b3b0;
   font-weight: 600;
+  margin-top: 6vh;
   font-size: calc(1.1vh + 1vw);
 }
 
 .rankbox_second {
-  background-color: #3c6482;
-  color: rgb(237, 237, 237);
-  margin-left: 7%;
+  justify-content: space-around;
+  display: flex;
+  margin-left: 6%;
   margin-right: 7%;
   width: 86%;
-  height: 12vh;
-  line-height: 11vh;
+  height: 8vh;
+  line-height: 2vh;
   font-weight: bold;
-  border-radius: 0.5vh 1.5vh;
-  border: 0.5vh solid #d7d6d2;
   font-weight: 600;
-  margin-top: 8vh;
+  margin-top: 7vh;
   font-size: calc(1.1vh + 1vw);
 }
 
 .rankbox_third {
-  background-color: #3c6482;
-  color: rgb(237, 237, 237);
-  margin-left: 7%;
+  justify-content: space-around;
+  display: flex;
+  margin-left: 5%;
   margin-right: 7%;
   width: 86%;
-  height: 12vh;
-  line-height: 11vh;
+  height: 8vh;
+  line-height: 2vh;
   font-weight: bold;
-  border-radius: 0.5vh 1.5vh;
-  border: 0.5vh solid #d7d6d2;
   font-weight: 600;
-  margin-top: 8vh;
+  margin-top: 7vh;
   font-size: calc(1.1vh + 1vw);
 }
 
-.centercontainer {
+.rightcontainer {
   width: 60%;
   display: flex;
   text-align: center;
   display: inline-block;
-  margin-top: 1vh;
 }
 
 .wordbox {
-  margin-top: 0vh;
-  height: 67vh;
+  margin-top: 9vh;
+  width: 90%;
+  height: 75vh;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-template-rows: repeat(12, 1fr);
@@ -146,95 +203,44 @@
   padding-right: 15px;
   padding-bottom: 2vh;
   padding-top: 2vh;
-  font-size: 2.4vh;
-  border: 6px solid #11324C;
-  box-shadow: 0px 0px 6px #11324C;
-  background-color: #f0eee9;
-  border-radius: 2%;
-  font-weight: 500;
+  font-size: calc(1vh + 0.9vw);
+  border: 1.5px solid #2d4567;
+  box-shadow: 0 0 0 1px #3b557a, 0 0 0 2px #455e82, 0 0 0 3px #536d92, 0 0 0 4px #6d86a8, 0 0 0 5px #7e95b6, 0 0 0 6px #7e95b6, 0 0 0 7px #8ea1bc, 0 0 0 8px #9aaac0, 0 0 0 1.5px #9dadc4;
+  background: linear-gradient(#f4ece1, #f9f4ea);  
+  border-radius: 1%;
+
+  @media (max-height: 710px){
+    font-size: calc(0.6vh + 0.85vw);
+    padding-top: 8px;
+  }
+
+  @media (max-width: 1300px) {
+    font-size: calc(1vh + 0.75vw);
+  }
 }
 
 .text {
   height: auto;
-  background-color: #11324C;
-  color: #f0eee9;
+  letter-spacing: 0.1vw;
+  background-color: #f9f8f4;
+  color: #293643;
+  border: 3px solid #293643;
   text-decoration: none;
-  border-radius: 0.6vh;
-  padding-top: 0.4vh;
-  padding-bottom: 0.4vh;
-  padding-left: 1.6vh;
-  padding-right: 1.6vh;
-  font-weight: 900;
+  border-radius: 0.4vh;
+  padding-top: 0.2vh;
+  padding-bottom: 0vh;
+  padding-left: 0.5vw;
+  padding-right: 0.5vw;
+  font-weight: 800;
+  font-family: 'Cafe24Ssurround';
 }
 
 .inputbox input {
   height: 5vh;
   border-radius: 1vh;
-  margin-top: 3.5vh;
-  width: 45%;
+  margin-top: 5vh;
+  width: 60%;
+  margin-right: 10%;
   text-align: center;
-  font-size: 3vh;
-  font-weight: 600;
-}
-
-.rightcontainer {
-  width: 10%;
-  flex-grow: 1;
-  text-align: center;
-  align-items: center;
-  margin-right: 6%;
-  margin-left: 4%;
-  margin-top: 0vh;
-}
-
-.profile {
-  background-color: #becfe3;
-  margin-top: 2.4vh;
-  height: 23vh;
-  border-radius: 20px;
-  box-shadow: 3.5px 3.5px 1px #1D2636;
-  border: 4px solid #1D2636;
-}
-
-.profile_name {
-  line-height: 5vh;
-  margin-top: 0.3vh;
-  font-size: 3vh;
-  background-color: #becfe3;
-  width: 85%;
-  margin-left: 7.5%;
-  border-bottom: 0.3vh solid #1D2636;
-  height: 20%;
-}
-
-.profile img {
-  margin-top: -2.95vh;
-  width: 90%;
-  height: 16vh;
-}
-
-.ranking {
-  background-color: #829bb9;
-  margin-top: 10vh;
-  height: 30vh;
-  border-radius: 20px;
-  box-shadow: 3.5px 3.5px 1px #1D2636;
-  border: 4px solid #1D2636;
-}
-
-.ranking_title {
-  line-height: 5vh;
-  margin-top: 0.5vh;
-  font-size: calc(1.5vh + 0.9vw);
-  background-color: #829bb9;
-  width: 85%;
-  margin-left: 7.5%;
-  border-bottom: 0.3vh solid #1D2636;
-  height: 18%;
-}
-
-.ranking_number {
-  margin-top: -4.5vh;
-  font-size: 17vh;
-  text-shadow: 0.4vh 0.4vh 0px #becfe3;
+  font-size: 2.8vh;
 }
