--- a/src/style/start.css
+++ b/src/style/start.css
@@ -1,23 +1,64 @@
+/* 시작화면 전체 컨테이너 */
 .start-container {
-    width: 100vw;
-    height: 100vh;
-    background-color: #8090a4;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+    position: absolute;
+    background: linear-gradient(140deg, #8090a4 40%, transparent 0%),
+                linear-gradient(190deg, #3b4755 50%, transparent 0%),
+                #6d8191;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.start-container * {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .start-container h1 {
+    font-family: 'VITRO';
     font-size: 45px;
     font-weight: 900;
     color: #F1F0E8;
     -webkit-text-stroke: 2px #11324D;
+    z-index: 3000;
+    margin: 0;
+
+    @media (min-width: 1400px) or (min-height: 700px) {
+        font-size: 2.5rem;
+    }
 }
 
+/* 창을 포함하는 컨테이너 */
 .start-subcontainer {
-    width: 950px;
-    height: 450px;
+    width: 100%;
+    height: auto;
+    margin: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    @media (min-height: 700px) {
+        margin: 60px;
+    }
+    @media (min-height: 800px) {
+        margin: 70px;
+    }
+    @media (min-height: 900px) {
+        margin: 80px;
+    }
+}
+
+/* 창 스타일 */
+.window {
+    width: 380px;
+    height: 300px;
     display: flex;
     justify-content: center;
     align-items: end;
@@ -26,33 +67,100 @@
     border: 2px solid #11324D;
     border-radius: 10px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s;
+    z-index: 3000;
+    transition: transform 0.3s ease-in-out;
+
+    @media (min-width: 1400px) {
+        width: 430px;
+    }
+    @media (min-width: 1600px) {
+        width: 460px;
+    }
+
+    @media (min-height: 700px) {
+        height: 350px;
+    }
+    @media (min-height: 800px) {
+        height: 400px;
+    }
+    @media (min-height: 900px) {
+        height: 450px;
+    }
+
 }
 
-.start-subcontainer:hover {
+.window:hover {
     box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
 }
 
-.start-subcontainer__bar {
+.window-bar {
     width: 100%;
-    height: 20px;
+    height: 10px;
     position: absolute;
     top: 0;
     left: 0;
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 0 0;;
     display: flex;
     justify-content: start;
     align-items: center;
-    padding: 12px 15px;
+    padding: 10px 15px;
 }
 
-.start-subcontainer__bar p {
+.window-bar p {
     color: #11324D;
-    font-size: 13px;
+    font-size: 19px;
 }
 
-.left-subcontainer {
-    width: 45%;
+
+/* 창 위치 설정 */
+.window.left {
+    position: absolute;
+    top: calc(50% + 35px);
+    left: calc(50% - 80px);
+    transform: translate(-50%, -50%);
+    z-index: 5000;
+}
+
+.window.right {
+    position: absolute;
+    top: calc(50% - 35px);
+    left: calc(50% + 80px);
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+.start-subcontainer:hover .window.left{
+    transform: translate(calc(-0% - 310px), calc(-50% - 55px));
+
+    @media (min-width: 1400px) {
+        transform: translate(calc(-50% - 360px), calc(-50% - 55px));
+    }
+
+    @media (min-width: 1600px) {
+        transform: translate(calc(-50% - 390px), calc(-50% - 55px));
+    }
+}
+
+.start-subcontainer:hover .window.middle{
+    transform: translateY(-20px);
+}
+
+.start-subcontainer:hover .window.right{
+    transform: translate(calc(-50% + 310px), calc(-50% + 15px));
+
+    @media (min-width: 1400px) {
+        transform: translate(calc(-50% + 360px), calc(-50% + 15px));
+    }
+
+    @media (min-width: 1600px) {
+        transform: translate(calc(-50% + 390px), calc(-50% + 15px));
+    }
+
+}
+
+/* 왼쪽 창 */
+.window-left {
+    width: 100%;
     height: calc(100% - 20px);
     display: flex;
     flex-direction: column;
@@ -60,15 +168,20 @@
     align-items: center;
     border-top: 2px solid #11324D;
     background-color: #F7F6F2;
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
 }
 
 .input-box {
     width: 90%;
     height: 30px;
     display: flex;
-    margin: 10px;
+    margin: 6px;
     justify-content: space-between;
+
+    @media (min-height: 700px) {
+        height: 33px;
+        margin: 8px;
+    }
 }
 
 .input-box div {
@@ -84,6 +197,8 @@
 .input-box div p {
     color: #11324D;
     font-weight: 700;
+    letter-spacing: 3px;
+    font-family: 'VITRO';
 }
 
 .input-box input {
@@ -93,6 +208,7 @@
     border-radius: 60px 30px / 20px 40px;
     transition: box-shadow 0.3s, transform 0.3s;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
 }
 
 .input-box input:hover {
@@ -112,7 +228,7 @@
 .promo-text p {
     padding: 5px 15px;
     border-radius: 80px 60px / 90px 60px;
-    font-weight: 400;
+    font-weight: 700;
     border: 1.5px solid #11324D;
     background-color: #7E94BF;
     color: #11324D;
@@ -120,18 +236,75 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.start-container label {
-    margin-top: 30px;
+/* 가운데 창 */
+.window-middle {
+    width: 100%;
+    height: calc(100% - 20px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    border-top: 2px solid #11324D;
+    background-color: #F7F6F2;
+    border-radius: 10px;
+    padding: 10px;
 }
 
-.start-container button {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+.window-middle h3 {
+    font-size: 18px;
+    color: #11324D;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 3px;
+    font-family: 'VITRO';
+
+    @media (min-width: 1400px) or (min-height: 700px) {
+        font-size: 21px;
+    }
 }
 
-.right-subcontainer {
-    width: 55%;
+.window-middle ul {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+
+    @media (min-height: 700px) {
+        margin: 15px 0;
+    }
+    @media (min-height: 800px) {
+        margin: 20px 0;
+    }
+}
+
+.window-middle li {
+    font-size: 14px;
+    color: #333;
+    line-height: 1.5;
+    letter-spacing: 0.2px;
+    position: relative;
+    font-weight: 400;
+    word-break: keep-all;
+
+    @media (min-width: 1400px) {
+        font-size: 15px;
+    }
+    
+    @media (min-height: 700px) {
+        line-height: 1.7;
+    }
+}
+
+.window-middle .highlight {
+    font-weight: bold;
+    color: #D9534F;
+    background-color: #F9F2F4;
+    border-radius: 4px;
+}
+
+/* 오른쪽 창 */
+.window-right {
+    width: 100%;
     height: calc(100% - 20px);
     display: flex;
     flex-direction: column;
@@ -139,65 +312,53 @@
     align-items: center;
     border-top: 2px solid #11324D;
     background-color: #F7F6F2;
-    border-radius: 0 10px 10px 0;
+    border-radius: 10px;
     padding: 20px;
 }
 
-.right-subcontainer h3 {
-    font-size: 20px;
-    color: #11324D;
-    margin: 0;
-    text-align: center;
-}
-
-.right-subcontainer ul {
-    list-style: none;
-    padding: 0;
-    margin: 20px 0;
-}
-
-.right-subcontainer li {
-    font-size: 16px;
-    color: #333;
-    line-height: 1.6;
-    position: relative;
-    word-break: keep-all;
-}
-
-.right-subcontainer .highlight {
-    font-weight: bold;
-    color: #D9534F;
-    background-color: #F9F2F4;
-    padding: 2px 4px;
-    border-radius: 4px;
-}
-
+/* 게임 시작 버튼 컨테이너 */
 .start-button-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 3000;
+    width: 100%;
 }
 
 .start-button-container label {
-    font-size: 18px;
+    font-family: 'VITRO';
+    font-size: 16px;
+    font-weight: 700;
     color: #F1F0E8;
-    margin-bottom: 10px;
+    margin-bottom: 3px;
+
+    @media (min-width: 1400px) or (min-height: 700px) {
+        font-size: 1rem;
+    }
 }
 
-.start-button-container button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #11324D;
-    color: #F1F0E8;
+.start-button-container div {
+    width: 80px;
+    height: 60px;
     border: none;
-    font-size: 18px;
     cursor: pointer;
-    transition: background-color 0.2s, box-shadow 0.3s, transform 0.3s;
+    background-image: url('../../public/image/enter.png');
+    transition: transform 0.3s;
+    background-size: 100% 100%;
+    background-position: center, center;
+
+    @media (min-width: 1400px) {
+        width: 100px;
+    }
+    
+    @media (min-height: 700px) {
+        height: 80px;
+    }
+    @media (min-height: 800px) {
+        height: 90px;
+    }
 }
 
-.start-button-container button:hover {
-    background-color: #0a2335;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+.start-button-container div:hover {
     transform: scale(1.1);
 }
