--- a/src/style/end.css
+++ b/src/style/end.css
@@ -1,6 +1,7 @@
 .game-result-screen {
   position: relative;
   height: 100vh;
+  width: 100vw;
   background: linear-gradient(140deg, #8090a4 40%, transparent 0%),
     linear-gradient(190deg, #3b4755 50%, transparent 0%), #6d8191;
   color: #fff;
@@ -13,10 +14,23 @@
 
 .current-score {
   position: absolute;
-  top: 50%;
-  left: 30px;
-  transform: translate(-50%, -50%);
+  left: 0;
+  top: 0;
   z-index: 1000;
+  width: 20vw;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.current-score h1 {
+  font-weight: 700;
+}
+
+.current-score .ranking-number {
+  min-width: 160px;
 }
 
 .teamicon {
@@ -92,13 +106,20 @@
   width: 100%;
   flex-direction: column;
   align-content: center;
-  justify-content: center;
+  justify-content: start;
   height: 60vh;
   text-align: center;
   background-color: #d4e1ea;
   padding: 10px;
   border-radius: 10px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+}
+
+.overall-ranking h1 {
+  margin: 10px;
+  margin-bottom: 20px;
+  color: #11324c;
+  font-weight: 900;
 }
 .myranking {
   display: flex;
@@ -135,6 +156,7 @@
   transform: translate(-50%, -50%);
   color: black;
   font-size: 18px;
+  margin: 30px;
 }
 
 .ranking-item2 {
